RESOLVED FIXED269114
[WebGPU] Crash in Constraints.cpp:199 concretize
https://bugs.webkit.org/show_bug.cgi?id=269114
Summary [WebGPU] Crash in Constraints.cpp:199 concretize
Mike Wyrzykowski
Reported 2024-02-09 16:25:05 PST
Running https://gpuweb.github.io/cts/standalone/?q=webgpu:shader,validation,expression,call,builtin,bitcast:bad_type_nonconstructible:var=%22t%22;direction=%22from%22 crashes on a release assert because texture_depth_2d can not be bitcast: @group(0) @binding(0) var s: sampler; @group(0) @binding(1) var t: texture_depth_2d; @group(0) @binding(2) var<storage> b: array<i32>; var<private> v: i32; @compute @workgroup_size(1) fn main() { let p = &v; let x = bitcast<i32>(t); } instead of release assert, we could probably return an error here since the wgsl is not valid
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-09 16:25:19 PST
Tadeu Zagallo
Comment 2 2024-02-12 14:05:15 PST
EWS
Comment 3 2024-02-13 04:30:31 PST
Committed 274539@main (28ce6649da17): <https://commits.webkit.org/274539@main> Reviewed commits have been landed. Closing PR #24283 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.