[WebGPU] Crash in Constraints.cpp:199 concretize https://bugs.webkit.org/show_bug.cgi?id=269114 rdar://122677724

Reviewed by Mike Wyrzykowski.

Make concretize return nullptr instead of release asserting so it's safe to call
with any types.

* Source/WebGPU/WGSL/Constraints.cpp:
(WGSL::concretize):
* Source/WebGPU/WGSL/Overload.cpp:
(WGSL::OverloadResolver::calculateRank):
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visitVariable):
(WGSL::TypeChecker::visit):
(WGSL::TypeChecker::bitcast):
* Source/WebGPU/WGSL/tests/invalid/bitcast.wgsl:

Canonical link: https://commits.webkit.org/274539@main